[gd_scene load_steps=21 format=3 uid="uid://e04poe4sb3a2"]

[ext_resource type="Script" path="res://scenes/game.gd" id="1_3w8d4"]
[ext_resource type="Script" path="res://scenes/game_manager.gd" id="2_4nbyl"]
[ext_resource type="PackedScene" uid="uid://d2ruoxbs8opce" path="res://scenes/Ghost.tscn" id="3_fv0rl"]
[ext_resource type="Texture2D" uid="uid://r0gw42tlyeq8" path="res://assets/world_tileset.png" id="4_qfbo8"]
[ext_resource type="Script" path="res://scenes/killzone.gd" id="5_cae3a"]
[ext_resource type="PackedScene" uid="uid://brxfawvccru6q" path="res://scenes/plat1.tscn" id="6_3h4jt"]
[ext_resource type="PackedScene" uid="uid://c7otj3lqfk7rw" path="res://scenes/plat2.tscn" id="7_p7ll8"]
[ext_resource type="PackedScene" uid="uid://6uyc45t8in1w" path="res://scenes/plat3.tscn" id="8_01v6n"]
[ext_resource type="PackedScene" uid="uid://bo07368o8586a" path="res://scenes/plat4.tscn" id="9_ci2wb"]
[ext_resource type="PackedScene" uid="uid://bx8jtyx2wv14n" path="res://scenes/plat5.tscn" id="10_w36e5"]
[ext_resource type="PackedScene" uid="uid://b23crl4m66vgy" path="res://scenes/plat6.tscn" id="11_w6k5w"]
[ext_resource type="PackedScene" uid="uid://dcix3owolqad7" path="res://scenes/plat7.tscn" id="12_uf30i"]
[ext_resource type="Script" path="res://scenes/ghost_kill_zone.gd" id="13_e7thm"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_d4l8v"]
distance = -11.0

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_8vm8f"]
normal = Vector2(-1, 0)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_t6dod"]
normal = Vector2(1, 0)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_mp7ls"]
texture = ExtResource("4_qfbo8")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:0/0 = 0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:0/0 = 0
9:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:0/0 = 0
10:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:0/0 = 0
11:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:1/0 = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:1/0 = 0
8:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:2/0 = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:2/0 = 0
8:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
7:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:3/0 = 0
9:3/0 = 0
0:4/0 = 0
1:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
7:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
1:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
0:7/0 = 0
1:7/0 = 0
3:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
6:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
2:4/size_in_atlas = Vector2i(3, 3)
2:4/0 = 0

[sub_resource type="TileSet" id="TileSet_u120u"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_mp7ls")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fdlie"]
size = Vector2(537, 69)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r8qdf"]
size = Vector2(541, 14)

[node name="Game" type="Node2D"]
script = ExtResource("1_3w8d4")

[node name="GameManager" type="Node" parent="."]
script = ExtResource("2_4nbyl")

[node name="ScoreLabel" type="Label" parent="GameManager"]
offset_left = -63.0
offset_top = -31.0
offset_right = 64.0
offset_bottom = -5.0
text = "Lvl. 0"
metadata/_edit_use_anchors_ = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -112)
zoom = Vector2(2, 2)

[node name="Ghost" parent="." instance=ExtResource("3_fv0rl")]
position = Vector2(4, -112)

[node name="Floor" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2(0, 191)
shape = SubResource("WorldBoundaryShape2D_d4l8v")

[node name="RightWall" type="StaticBody2D" parent="."]
position = Vector2(128, -6)

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightWall"]
position = Vector2(144, 8)
shape = SubResource("WorldBoundaryShape2D_8vm8f")

[node name="LeftWall" type="StaticBody2D" parent="."]
position = Vector2(-171, 3)

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftWall"]
position = Vector2(-103, -3)
shape = SubResource("WorldBoundaryShape2D_t6dod")

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(-145, -29)
tile_set = SubResource("TileSet_u120u")
format = 2
layer_0/tile_data = PackedInt32Array(-262153, 524288, 0, -196617, 524288, 0, -131081, 524288, 0, -65545, 524288, 0, -9, 524288, 0, 65527, 524288, 0, 131063, 524288, 0, 196599, 524288, 0, 262135, 524288, 0, 327671, 524288, 0, -327689, 524288, 0, -393225, 524288, 0, -458761, 524288, 0, -524297, 524288, 0, -589833, 524288, 0, -655369, 524288, 0, -720905, 524288, 0, -786441, 524288, 0, -851977, 524288, 0, -917513, 524288, 0, -983049, 524288, 0, -1048585, 524288, 0, -1114121, 524288, 0, -1179657, 524288, 0, -1245193, 524288, 0, -1310729, 524288, 0, 262170, 524288, 0, 196634, 524288, 0, 131098, 524288, 0, 65562, 524288, 0, 26, 524288, 0, -65510, 524288, 0, -262118, 524288, 0, -196582, 524288, 0, -131046, 524288, 0, -327654, 524288, 0, -393190, 524288, 0, -458726, 524288, 0, -524262, 524288, 0, -589798, 524288, 0, -655334, 524288, 0, -720870, 524288, 0, -786406, 524288, 0, -851942, 524288, 0, -917478, 524288, 0, -983014, 524288, 0, -1048550, 524288, 0, -1114086, 524288, 0, -1179622, 524288, 0, -1245158, 524288, 0, -1310694, 524288, 0, -1376230, 524288, 0, 393207, 524288, 0, 327706, 524288, 0, 393242, 524288, 0, 458743, 524288, 0, 524279, 524288, 0, 458778, 524288, 0)

[node name="Killzone" type="Area2D" parent="."]
position = Vector2(0, 100)
script = ExtResource("5_cae3a")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Killzone"]
position = Vector2(-0.5, 19)
shape = SubResource("RectangleShape2D_fdlie")

[node name="platforms" type="Node" parent="."]

[node name="plat1" parent="platforms" instance=ExtResource("6_3h4jt")]
position = Vector2(0, 35)

[node name="plat2" parent="platforms" instance=ExtResource("7_p7ll8")]
position = Vector2(0, -30)

[node name="plat3" parent="platforms" instance=ExtResource("8_01v6n")]
position = Vector2(0, -94)

[node name="plat4" parent="platforms" instance=ExtResource("9_ci2wb")]
position = Vector2(0, -157)

[node name="plat5" parent="platforms" instance=ExtResource("10_w36e5")]
position = Vector2(0, -221)

[node name="plat6" parent="platforms" instance=ExtResource("11_w6k5w")]
position = Vector2(0, -285)

[node name="plat7" parent="platforms" instance=ExtResource("12_uf30i")]
position = Vector2(0, -348)

[node name="PlayerKillZone" type="Area2D" parent="."]
position = Vector2(-22, 68)
collision_mask = 2
script = ExtResource("13_e7thm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerKillZone"]
position = Vector2(21.5, 3)
shape = SubResource("RectangleShape2D_r8qdf")

[connection signal="area_entered" from="Killzone" to="Killzone" method="_on_area_entered"]
[connection signal="area_exited" from="Killzone" to="Killzone" method="_on_area_exited"]
[connection signal="body_entered" from="Killzone" to="Killzone" method="_on_body_entered"]
[connection signal="body_entered" from="PlayerKillZone" to="PlayerKillZone" method="_on_body_entered"]
